# minimalist-chat-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
chat_app/: client.py  server.py  utils.py
